--- a/SwapStff/Views/AbuseItems/Index.cshtml
+++ b/SwapStff/Views/AbuseItems/Index.cshtml
@@ -1,9 +1,9 @@
-﻿@model IEnumerable<SwapStff.Models.ItemModel>
-
+﻿@model IEnumerable<SwapStff.Models.AbuseItemsModel>
 @{
-    ViewBag.Title = "User Items";
+    ViewBag.Title = "Abuse Items List";
     Layout = "~/Views/Shared/_LayoutBackEnd.cshtml";
 }
+
 <!-- For Sorting & Paging -->
 <script src="@Url.Content("~/Scripts/jquery-1.4.4.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.tablesorter.js")" type="text/javascript"></script>
@@ -17,32 +17,29 @@
     });
 </script>
 
-<h2 class="text-center">User Items</h2>
+<h2 class="text-center">Abuse Items List</h2>
 
 <div class="MyTable">
     <table id="MyTable" class="tablesorter">
         <thead>
             <tr>
-                @*<th>
-                    @Html.DisplayNameFor(model => model.ItemID)
-                </th>*@
                 <th>
-                    @Html.DisplayNameFor(model => model.ProfileID)
+                    Profile ID
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.ItemTitle)
+                    Item Title
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.ItemDescription)
+                    Item Description
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.ItemImage)
+                    Item Image
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.ItemDateTimeCreated)
+                    Abuse ProfileID
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.IsActive)
+                    Abuse Message
                 </th>
                 <th>Operation</th>
             </tr>
@@ -50,30 +47,26 @@
         <tbody>
             @foreach (var item in Model)
             {
-
                 <tr>
-                    @*<td>
-                        @Html.DisplayFor(modelItem => item.ItemID)
-                    </td>*@
                     <td>
-                        @Html.DisplayFor(modelItem => item.ProfileID)
+                        @item.ProfileID
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.ItemTitle)
+                        @item.ItemTitle
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.ItemDescription)
+                        @item.ItemDescription
                     </td>
                     <td>
                         <img src="@item.ItemImage" width="50" height="50" />
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.ItemDateTimeCreated)
+                        @item.ProfileIdBy
                     </td>
                     <td>
-                        <label id="lblActive" title="@item.IsActive">@item.IsActive</label>
+                        @item.AbuseMessage
                     <td>
-                        @Html.ActionLink("Delete", "Delete", new { ItemID = item.ItemID })
+                        @Html.ActionLink("Delete","../UserItems/Delete", new { ItemID = @item.ItemID })
                     </td>
                 </tr>
             }
@@ -96,3 +89,4 @@
         </form>
     </div>
 </div>
+
