--- a/SwapStff/Views/Shared/_LayoutBackEnd.cshtml
+++ b/SwapStff/Views/Shared/_LayoutBackEnd.cshtml
@@ -107,7 +107,18 @@
                                 <li>
                                     <a href="#" onclick="location.href='@Url.Action("Index", "UserItems")'">Items<span>&nbsp;</span></a>
                                 </li>
-                                
+                                <li>
+                                    <a href="#" onclick="location.href='@Url.Action("Index", "AbuseItems")'">Abuse Items List<span>&nbsp;</span></a>
+                                </li>
+                                <li>
+                                    <a href="#" onclick="location.href='@Url.Action("Index", "UserItemMatchs")'">Item Match List<span>&nbsp;</span></a>
+                                </li>
+                                <li>
+                                    <a href="#" onclick="location.href='@Url.Action("Index", "UserChats")'">Chats<span>&nbsp;</span></a>
+                                </li>
+                                <li>
+                                    <a href="#" onclick="location.href='@Url.Action("Index", "ErrorExceptionLogs")'">Error Logs<span>&nbsp;</span></a>
+                                </li>
                             </ul>
 
                         </nav>
@@ -122,7 +133,7 @@
         <div id="body">
             @RenderBody()
         </div>
-    
+    <div class="clearfix"></div>
         <!-- FOOTER -->
         <footer id="footer">
             <div class="copyright">
@@ -137,20 +148,27 @@
 
     </div><!-- /#wrapper -->
     <!-- JAVASCRIPT FILES -->
-    <script type="text/javascript" src="~/assets/plugins/jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" src="~/assets/plugins/jquery.isotope.js"></script>
-    <script type="text/javascript" src="~/assets/plugins/masonry.js"></script>
+    @*<script type="text/javascript" src="~/assets/plugins/jquery-2.1.1.min.js"></script>*@
+    @*<script type="text/javascript" src="~/assets/plugins/jquery.isotope.js"></script>
+    <script type="text/javascript" src="~/assets/plugins/masonry.js"></script>*@
 
-    <script type="text/javascript" src="~/assets/plugins/bootstrap/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="~/assets/plugins/magnific-popup/jquery.magnific-popup.min.js"></script>
-    <script type="text/javascript" src="~/assets/plugins/knob/js/jquery.knob.js"></script>
+    @*<script type="text/javascript" src="~/assets/plugins/bootstrap/js/bootstrap.min.js"></script>*@
+    @*<script type="text/javascript" src="~/assets/plugins/magnific-popup/jquery.magnific-popup.min.js"></script>*@
+    @*<script type="text/javascript" src="~/assets/plugins/knob/js/jquery.knob.js"></script>*@
     
+
     <!-- REVOLUTION SLIDER -->
-    <script type="text/javascript" src="~/assets/js/revolution_slider.js"></script>
+    @*<script type="text/javascript" src="~/assets/js/revolution_slider.js"></script>*@
 
 
-    <script type="text/javascript" src="~/assets/js/scripts.js"></script>
+    @*<script type="text/javascript" src="~/assets/js/scripts.js"></script>*@
     @*<script type="text/javascript" src="assets/plugins/styleswitcher/styleswitcher.js">        /** REMOVE ON PRODUCTION **/</script>*@
+    
+
+    
+    <!-- For Sorting & Paging -->
+    @*<script src="~/Scripts/jquery-1.4.4.min.js" type="text/javascript"></script>
+    <script src="~/Scripts/footer.js" type="text/javascript"></script>*@
 
     @RenderSection("scripts", required: false)
 </body>
