--- a/SwapStff/Views/UserChats/Index.cshtml
+++ b/SwapStff/Views/UserChats/Index.cshtml
@@ -1,7 +1,6 @@
-﻿@model IEnumerable<SwapStff.Models.ProfileModel>
-
+﻿@model IEnumerable<SwapStff.Models.UserChatsModel>
 @{
-    ViewBag.Title = "User Profiles";
+    ViewBag.Title = "User Chats";
     Layout = "~/Views/Shared/_LayoutBackEnd.cshtml";
 }
 
@@ -10,6 +9,7 @@
 <script src="@Url.Content("~/Scripts/jquery.tablesorter.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.tablesorter.pager.js")" type="text/javascript"></script>
 <script src="~/Scripts/footer.js" type="text/javascript"></script>
+
 <script type="text/javascript">
     $(function () {
         $("table.tablesorter").tablesorter({ widthFixed: true, sortList: [[0, 0]] })
@@ -17,37 +17,38 @@
     });
 </script>
 
-<h2 class="text-center">User Profiles</h2>
-    @*<p>
-            @Html.ActionLink("Create New", "Create")
-        </p>*@
+<h2 class="text-center">User Chats</h2>
+
 <div class="MyTable">
     <table id="MyTable" class="tablesorter">
         <thead>
             <tr>
                 <th>
-                    @Html.DisplayNameFor(model => model.ProfileId)
+                    Item Title (Sender)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Username)
+                    Item Image (Sender)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Latitude)
+                    ProfileId (Sender)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Longitude)
+                    Item Title (Recipient)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.DateTimeCreated)
+                    Item Image (Recipient)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Distance)
+                    ProfileId (Recipient)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.ItemMatchNotification)
+                    Chat Content
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.ChatNotification)
+                   Date Time Created
+                </th>
+                <th>
+                    Is Read
                 </th>
                 <th>Operation</th>
             </tr>
@@ -57,54 +58,38 @@
             {
                 <tr>
                     <td>
-                        @Html.DisplayFor(modelItem => item.ProfileId)
+                        @item.ItemTitleBy
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Username)
+                        <img src="@item.ItemImageBy" width="50" height="50" />
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Latitude)
+                        @item.ProfileIdBy
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Longitude)
+                        @item.ItemTitleTo
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.DateTimeCreated)
+                        <img src="@item.ItemImageTo" width="50" height="50" />
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Distance)
+                        @item.ProfileIdTo
                     </td>
                     <td>
-                        @{
-                            if (item.ItemMatchNotification == 1)
-                            {
-                                <label id="lblItemMatchNotification" title="Yes">Yes</label>
-                            }
-                            else
-                            {
-                                <label id="lblItemMatchNotification" title="No">No</label>
-                            }
-                        }
+                        @item.ChatContent
                     </td>
                     <td>
-                        @{
-                            if (item.ChatNotification == 1)
-                            {
-                                <label id="lblChatNotification" title="Yes">Yes</label>
-                            }
-                            else
-                            {
-                                <label id="lblChatNotification" title="No">No</label>
-                            }
-                        }
+                        @item.DateTimeCreated
                     </td>
                     <td>
-                        @Html.ActionLink("Edit", "Edit", new { ProfileId = item.ProfileId }) |
-                        @Html.ActionLink("Delete", "Delete", new { ProfileId = item.ProfileId })
+                        <label id="lblRead" title="@item.IsRead">@item.IsRead</label>
+                    </td>
+                    <td>
+                        @Html.ActionLink("Delete", "Delete", new { ChatId = item.ChatId })
                     </td>
                 </tr>
             }
-        </tbody>
+            </tbody>
     </table>
     <div id="pager" style="position: none;">
         <form>
@@ -122,5 +107,4 @@
             </select>
         </form>
     </div>
-
 </div>
