--- a/SwapStff/Views/UserItemMatchs/Index.cshtml
+++ b/SwapStff/Views/UserItemMatchs/Index.cshtml
@@ -1,7 +1,7 @@
-﻿@model IEnumerable<SwapStff.Models.ProfileModel>
+﻿@model IEnumerable<SwapStff.Models.UserItemMatchModel>
 
 @{
-    ViewBag.Title = "User Profiles";
+    ViewBag.Title = "Item Match List";
     Layout = "~/Views/Shared/_LayoutBackEnd.cshtml";
 }
 
@@ -10,6 +10,7 @@
 <script src="@Url.Content("~/Scripts/jquery.tablesorter.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.tablesorter.pager.js")" type="text/javascript"></script>
 <script src="~/Scripts/footer.js" type="text/javascript"></script>
+
 <script type="text/javascript">
     $(function () {
         $("table.tablesorter").tablesorter({ widthFixed: true, sortList: [[0, 0]] })
@@ -17,39 +18,32 @@
     });
 </script>
 
-<h2 class="text-center">User Profiles</h2>
-    @*<p>
-            @Html.ActionLink("Create New", "Create")
-        </p>*@
+<h2 class="text-center">User Item Match List</h2>
 <div class="MyTable">
     <table id="MyTable" class="tablesorter">
         <thead>
             <tr>
                 <th>
-                    @Html.DisplayNameFor(model => model.ProfileId)
+                    @Html.DisplayNameFor(model => model.ProfileID1)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Username)
+                    @Html.DisplayNameFor(model => model.ItemTitle1)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Latitude)
+                    @Html.DisplayNameFor(model => model.ItemImage1)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Longitude)
+                    @Html.DisplayNameFor(model => model.ProfileID2)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.DateTimeCreated)
+                    @Html.DisplayNameFor(model => model.ItemTitle2)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.ItemImage2)
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.Distance)
                 </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.ItemMatchNotification)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.ChatNotification)
-                </th>
-                <th>Operation</th>
             </tr>
         </thead>
         <tbody>
@@ -57,50 +51,25 @@
             {
                 <tr>
                     <td>
-                        @Html.DisplayFor(modelItem => item.ProfileId)
+                        @Html.DisplayFor(modelItem => item.ProfileID1)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Username)
+                        @Html.DisplayFor(modelItem => item.ItemTitle1)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Latitude)
+                        <img src="@item.ItemImage1" width="50" height="50" />
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Longitude)
+                        @Html.DisplayFor(modelItem => item.ProfileID2)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.DateTimeCreated)
+                        @Html.DisplayFor(modelItem => item.ItemTitle2)
+                    </td>
+                    <td>
+                        <img src="@item.ItemImage2" width="50" height="50" />
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Distance)
-                    </td>
-                    <td>
-                        @{
-                            if (item.ItemMatchNotification == 1)
-                            {
-                                <label id="lblItemMatchNotification" title="Yes">Yes</label>
-                            }
-                            else
-                            {
-                                <label id="lblItemMatchNotification" title="No">No</label>
-                            }
-                        }
-                    </td>
-                    <td>
-                        @{
-                            if (item.ChatNotification == 1)
-                            {
-                                <label id="lblChatNotification" title="Yes">Yes</label>
-                            }
-                            else
-                            {
-                                <label id="lblChatNotification" title="No">No</label>
-                            }
-                        }
-                    </td>
-                    <td>
-                        @Html.ActionLink("Edit", "Edit", new { ProfileId = item.ProfileId }) |
-                        @Html.ActionLink("Delete", "Delete", new { ProfileId = item.ProfileId })
                     </td>
                 </tr>
             }
@@ -122,5 +91,4 @@
             </select>
         </form>
     </div>
-
 </div>
