--- a/SwapStff/Views/UserProfiles/Delete.cshtml
+++ b/SwapStff/Views/UserProfiles/Delete.cshtml
@@ -7,8 +7,9 @@
 
 <h2 class="text-center">User Profile</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
+
+<div class="MyTable">
+    <h3>Are you sure you want to delete this?</h3>
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.ProfileId)
@@ -65,7 +66,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="bigButton" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("User Profiles", "Index")
         </div>
     }
 </div>
