--- a/SwapStff/assets/css/layout.css
+++ b/SwapStff/assets/css/layout.css
@@ -1730,3 +1730,47 @@ body.boxed .onepage-slider-offset {
        max-width: 528px;
      border: 1px solid gray;
 }
+
+/**/table { border-spacing:0; border:1px solid gray;}
+table.tablesorter thead tr .header {
+	background-image: url(../images/sorting/bg.png);
+	background-repeat: no-repeat;
+	background-position: center right;
+	cursor: pointer;
+}
+table.tablesorter tbody td {
+	color: #3D3D3D;
+	padding: 4px;
+	background-color: #FFF;
+	vertical-align: top;
+}
+table.tablesorter tbody tr.odd td {
+	background-color:#F0F0F6;
+}
+table.tablesorter thead tr .headerSortUp {
+	background-image: url(../images/sorting/asc.png);
+}
+table.tablesorter thead tr .headerSortDown {
+	background-image: url(../images/sorting/desc.png);
+}
+table th { width:150px; 
+           border:1px outset gray; 
+           background-color:#33B5E6; 
+           color:White; 
+           cursor:pointer;
+}
+table thead th:hover { background-color:#E4B9B9; color:Black;}
+table td { width:150px; border:1px solid gray;word-break: break-all;}
+
+.pagedisplay {
+    width:50px !important;
+    opacity:0.5;
+    pointer-events:none;
+}
+.pagesize {
+    width:70px !important;
+}
+.MyTable {
+    margin-left:50px;
+    min-height:414px;
+}
