--- a/SwapStff/Views/Shared/_LayoutBackEnd.cshtml
+++ b/SwapStff/Views/Shared/_LayoutBackEnd.cshtml
@@ -119,6 +119,9 @@
                                 <li>
                                     <a href="#" onclick="location.href='@Url.Action("Index", "ErrorExceptionLogs")'">Error Logs<span>&nbsp;</span></a>
                                 </li>
+                                <li>
+                                    <a href="#" onclick="location.href='@Url.Action("Edit", "UserAppSettings")'">App Setting<span>&nbsp;</span></a>
+                                </li>
                             </ul>
 
                         </nav>
